--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -8,6 +8,7 @@
     position: sticky;
     top: 70px;
     // margin: auto
+    // width: 50%;
     height: calc(100vh - 70px);
     background-color: themed("bgSoft");
 
@@ -26,7 +27,7 @@
     }
 
     .container {
-      padding: 20px;
+      padding: 20px auto;
 
       .item {
         -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
