--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -4,7 +4,7 @@
   @include themify($themes) {
     flex: 2;
     height: calc(100vh - 70px);
-    overflow: scroll;
+    // overflow: scroll;
     background-color: themed("bg");
     color: themed("textColor");
 
