--- a/src/style.scss
+++ b/src/style.scss
@@ -11,13 +11,18 @@ $themes: (
   light: (
     textColor: #000,
     bg: white,
-    
+
     logo: mediumseagreen,
     bgSoft: #f6f3f3,
     textColorSoft: #555,
     border: lightgray,
   ),
 );
+
+body {
+  overflow-x: hidden;
+  // overflow: hidden;
+}
 
 @mixin themify($themes) {
   @each $theme, $map in $themes {
