--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,22 +3,18 @@
 .navbar {
   @include themify($themes) {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 22px;
     height: 50px;
     border-bottom: 1px solid themed("border");
     position: sticky;
-    // align-self: flex-start;
     top: 0;
     background-color: themed("bg");
     color: themed("textColor");
     z-index: 999;
     width: 100%;
-    padding: 0 30px;
-    // width: 100vw;
-
-    overflow-x: hidden;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0;
+ 
 
     .left {
       display: flex;
@@ -28,22 +24,20 @@
       span {
         font-weight: bold;
         font-size: 20px;
-        // margin: 40px;
         color: themed("logo");
       }
 
       .search {
         display: flex;
         align-items: center;
+        gap: 10px;
         border: 1px solid themed("border");
         border-radius: 5px;
         padding: 5px;
-        // padding: 4px 10px;
-        gap: 10px;
 
         input {
           border: none;
-          width: 400px;
+          width: 500px;
           background-color: transparent;
           color: themed("textColor");
 
@@ -62,19 +56,17 @@
       display: flex;
       align-items: center;
       gap: 20px;
-      // right: -20px;
 
       @include mobile {
         display: none;
-        // width: 100%;
       }
 
       .user {
         display: flex;
         align-items: center;
         gap: 10px;
+        margin-right: 40px;
         font-weight: 500;
-        right: -30px;
 
         @include tablet {
           display: none;
